nextcloud/nextcloud_middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-headers
spec:
  headers:
    frameDeny: true
    browserXssFilter: true
    customResponseHeaders:
      Strict-Transport-Security: "15552000"
      X-Frame-Options: SAMEORIGIN
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-redirectregex
spec:
  redirectRegex:
    permanent: true
    regex: https://(.*)/.well-known/(?:card|cal)dav
    replacement: https://${1}/remote.php/dav
